Allow toggling the base station mapping.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="cdma_1xrtt_base_station">1xRTT Tower</string>
     <string name="_1xrtt_signal_strength">1xRTT Signal</string>
     <string name="_2g_3g_signal">2G/3G Signal</string>
+    <string name="show_base_station">Show base station</string>
+    <string name="hide_base_station">Hide base station</string>
 </resources>
