--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="ok">OK</string>
     <string name="permission_location_rationale">To display or log signal information, this application requires access to your location.</string>
     <string name="loading">Loading…</string>
-    <string name="share_logs">Share logs to...</string>
+    <string name="share_logs">Share logs to…</string>
     <string name="share">Share</string>
     <string name="sitesToLog">Types of cellular sites to log</string>
     <string name="clearLogSummary">Delete base station logs from user storage.</string>
